--- a/app/app/css/main.css
+++ b/app/app/css/main.css
@@ -1,17 +1,5 @@
 /*! http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -20,8 +8,7 @@ time, mark, audio, video {
   vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
 
 body {
@@ -34,8 +21,7 @@ ol, ul {
 blockquote, q {
   quotes: none; }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before, blockquote:after, q:before, q:after {
   content: '';
   content: none; }
 
@@ -159,8 +145,8 @@ Animate.css - http://daneden.me/animate Licensed under the MIT license - http://
   cursor: pointer; }
 
 .rn-carousel-indicator span {
-  -webkit-transition: color .2s ease-out;
-  transition: color .2s ease-out;
+  -webkit-transition: color 0.2s ease-out;
+  transition: color 0.2s ease-out;
   padding: 0 5px;
   color: #333; }
 
@@ -188,13 +174,13 @@ Animate.css - http://daneden.me/animate Licensed under the MIT license - http://
 
 .rn-carousel-control.rn-carousel-control-prev {
   left: 0.5em;
-  background: url("../images/icon-carousel-arrow.png") 0 0 no-repeat;
+  background: url('../images/icon-carousel-arrow.png') 0 0 no-repeat;
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg); }
 
 .rn-carousel-control.rn-carousel-control-next {
   right: 0.5em;
-  background: url("../images/icon-carousel-arrow.png") 0 0 no-repeat; }
+  background: url('../images/icon-carousel-arrow.png') 0 0 no-repeat; }
 
 .rn-carousel-container .img {
   margin: 0 auto;
@@ -213,7 +199,7 @@ Animate.css - http://daneden.me/animate Licensed under the MIT license - http://
   display: none;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, transparent), color-stop(1, transparent)); }
   .rn-carousel-container .swipe p {
-    background: -webkit-gradient(linear, left top, right top, color-stop(0, #4d4d4d), color-stop(0.4, #4d4d4d), color-stop(0.5, white), color-stop(0.6, #4d4d4d), color-stop(1, #4d4d4d));
+    background: -webkit-gradient(linear, left top, right top, color-stop(0, #4d4d4d), color-stop(0.4, #4d4d4d), color-stop(0.5, #ffffff), color-stop(0.6, #4d4d4d), color-stop(1, #4d4d4d));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-animation: slidetounlock 3s infinite; }
@@ -222,22 +208,22 @@ Animate.css - http://daneden.me/animate Licensed under the MIT license - http://
   color: #606162; }
 
 .color.lg {
-  color: #757b82; }
+  color: #757B82; }
 
 .color.ltg {
-  color: #acabab; }
+  color: #ACABAB; }
 
 .color.ow {
-  color: #eaeaea; }
+  color: #EAEAEA; }
 
 .color.vb {
-  color: #2db8ee; }
+  color: #2DB8EE; }
 
 .color.lb {
-  color: #00b771; }
+  color: #00B771; }
 
 .color.pb {
-  color: #dd4f99; }
+  color: #DD4F99; }
 
 .panel.dg {
   background-color: #606162; }
@@ -270,25 +256,25 @@ h1, h2, h3, p {
 
 h1 {
   font-size: 3.8em;
-  color: #eaeaea; }
+  color: #EAEAEA; }
   h1 .tldr {
     font-size: 1rem;
     cursor: help;
-    color: #2db8ee;
+    color: #2DB8EE;
     text-decoration: underline; }
     h1 .tldr:hover {
       text-decoration: none; }
     h1 .tldr:before {
       display: inline-block;
-      content: "("; }
+      content: '('; }
     h1 .tldr:after {
       display: inline-block;
-      content: ")"; }
+      content: ')'; }
 
 h2 {
   margin-top: 3em;
   font-size: 2.6em;
-  color: #eaeaea; }
+  color: #EAEAEA; }
 
 h3 {
   font-size: 2em; }
@@ -300,16 +286,16 @@ p {
     font-size: 1.2em;
     color: #d1d1d1; }
 
-a.link,
-span.link {
+a.link, span.link {
   color: #fff;
-  background-color: #2db8ee;
+  background-color: #2DB8EE;
   padding: 4px 8px;
   border-radius: 4px;
   text-decoration: none; }
 
 a.link:hover {
-  background-color: #119fd7; }
+  background-color: #11a2d7; }
+
 
 .hide-access {
   display: none; }
@@ -320,11 +306,11 @@ a.link:hover {
   display: none; }
 
 .no-touch nav ul li a:hover {
-  background: #dd4f99; }
+  background: #DD4F99; }
   .no-touch nav ul li a:hover .arrow {
-    background: #dd4f99 !important; }
+    background: #DD4F99 !important; }
 .no-touch nav ul li:nth-child(3) a:hover {
-  color: #eaeaea; }
+  color: #EAEAEA; }
 
 .touch .rn-carousel-container .swipe {
   display: block; }
@@ -334,7 +320,7 @@ a.link:hover {
 #view {
   background-color: #606162;
   margin-top: 0;
-  -webkit-transition: margin .2s;
+  -webkit-transition: margin 0.2s;
   transition: margin 0.2s;
   position: relative; }
 
@@ -354,9 +340,9 @@ nav {
         -webkit-transition: all 1s;
         transition: all 1s; }
       nav h1 a .alt-color {
-        color: #2db8ee; }
+        color: #2DB8EE; }
       nav h1 a:hover .alt-color {
-        color: #dd4f99; }
+        color: #DD4F99; }
   nav ul {
     margin: 0 -1em;
     overflow: hidden; }
@@ -368,20 +354,20 @@ nav {
       nav ul li p {
         margin: 0; }
         nav ul li p a {
-          color: #eaeaea;
+          color: #EAEAEA;
           text-decoration: none;
           display: block;
           padding: 12px 0; }
       nav ul li:nth-child(1) a {
-        background: #2db8ee; }
+        background: #2DB8EE; }
       nav ul li:nth-child(2) a {
-        background: #00b771; }
+        background: #00B771; }
       nav ul li:nth-child(3) a {
         color: #606162; }
       nav ul li:nth-child(3) {
         width: 34%; }
         nav ul li:nth-child(3) a {
-          background: #efe33e; }
+          background: #EFE33E; }
       nav ul li.active .arrow {
         width: 20px;
         height: 20px;
@@ -393,97 +379,120 @@ nav {
         transform: rotate(45deg);
         z-index: 5; }
       nav ul li.active:nth-child(1) .arrow {
-        background: #2db8ee; }
+        background: #2DB8EE; }
       nav ul li.active:nth-child(2) .arrow {
-        background: #00b771; }
+        background: #00B771; }
       nav ul li.active:nth-child(3) .arrow {
-        background: #efe33e; }
+        background: #EFE33E; }
 
 #home section {
-  background-color: #757b82; }
+  background-color: #757B82; }
 
 #about a {
-  color: #2db8ee;
-  border-color: #2db8ee; }
-#about a.link,
-#about span.link {
-  background-color: #2db8ee; }
+  color: #2DB8EE;
+  border-color: #2DB8EE; }
+#about a.link, #about span.link {
+  background-color: #2DB8EE; }
 #about a.link:hover {
-  background-color: #119fd7; }
+  background-color: #11a2d7; }
 #about section {
-  background-color: #2db8ee; }
+  background-color: #2DB8EE; }
 
 #clients a {
-  color: #00b771;
-  border-color: #00b771; }
-#clients a.link,
-#clients span.link {
-  background-color: #00b771; }
+  color: #00B771;
+  border-color: #00B771; }
+#clients a.link, #clients span.link {
+  background-color: #00B771;
+  display: block; }
 #clients a.link:hover {
-  background-color: #008452; }
+  background-color: #008451; }
 #clients section {
-  background-color: #00b771; }
-#clients img {
-  max-width: 768px;
-  width: 100%;
-  height: auto;
-  clear: both;
-  display: block;
-  margin-bottom: 1em; }
+  background-color: #00B771; }
+#clients .image-wrap {
+  position: relative;
+  max-width: 768px; }
+  #clients .image-wrap img {
+    max-width: 768px;
+    width: 100%;
+    height: auto;
+    clear: both;
+    display: block;
+    margin: 2em 0 2em 0;
+    box-shadow: 0px 3px 25px black;
+    box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.75); }
+  #clients .image-wrap .show-section {
+    position: absolute;
+    bottom: -67px;
+    right: 0px; }
+    #clients .image-wrap .show-section .icon-wrap-close {
+      width: 16px;
+      height: 16px;
+      margin: 5px 5px 0 0;
+      background: url('../images/icon-close.png') center center no-repeat;
+      display: block;
+      float: left; }
+    #clients .image-wrap .show-section .icon-wrap-show {
+      width: 18px;
+      height: 17px;
+      margin: 2px 5px 0 0;
+      background: url('../images/icon-close.png') -141px -133px no-repeat;
+      display: block;
+      float: left; }
 
 #contact a {
-  color: #efe33e;
-  border-color: #efe33e; }
-#contact a.link,
-#contact span.link {
-  background-color: #efe33e; }
+  color: #EFE33E;
+  border-color: #EFE33E; }
+#contact a.link, #contact span.link {
+  background-color: #EFE33E; }
 #contact a.link:hover {
-  background-color: #e7d913; }
+  background-color: #e7d513; }
 #contact section {
-  background-color: #efe33e; }
+  background-color: #EFE33E; }
   #contact section h1, #contact section h2, #contact section h3, #contact section ul, #contact section li, #contact section p {
     color: #606162; }
+
+
 
 .panel {
   margin: 2em 0;
   padding: 5em;
   min-height: 270px;
-  -webkit-transition: padding .3s;
-  transition: padding .3s; }
+  -webkit-transition: padding 0.3s;
+  transition: padding 0.3s; }
   .panel p {
-    color: #eaeaea;
+    color: #EAEAEA;
     max-width: 768px; }
     .panel p.show-section {
       display: inline-block;
       cursor: pointer;
       clear: both; }
     .panel p a {
-      color: #2db8ee;
+      color: #2DB8EE;
       text-decoration: none;
-      border-bottom: 1px dotted #2db8ee; }
+      border-bottom: 1px dotted #2DB8EE; }
     .panel p a:hover {
-      color: #00b771;
+      color: #00B771;
       text-decoration: none;
-      border-bottom: 1px dotted #00b771; }
+      border-bottom: 1px dotted #00B771; }
   .panel ul {
     list-style-type: square;
     margin-left: 24px;
     margin-bottom: 3.1em;
     padding-left: 24px; }
     .panel ul li {
-      color: #eaeaea; }
+      color: #EAEAEA; }
       .panel ul li p {
         margin-bottom: 0; }
   .panel section {
     margin: 0 -5em;
     overflow: hidden; }
     .panel section.ng-enter {
-      transition: .75s;
+      transition: 0.75s;
       opacity: 0; }
     .panel section.ng-enter-active {
       opacity: 1; }
     .panel section.ng-leave {
-      transition: .75s;
+      transition: 0.75s;
       opacity: 1; }
     .panel section.ng-leave-active {
       opacity: 0; }
@@ -506,7 +515,7 @@ nav {
   .notice h1 {
     color: #606162; }
   .notice a {
-    color: #2db8ee; }
+    color: #2DB8EE; }
 
 #sosumi {
   padding: 12px 0;
@@ -521,7 +530,7 @@ nav {
       color: #606162;
       text-decoration: none; }
       #sosumi p a:hover {
-        color: #2db8ee; }
+        color: #2DB8EE; }
   #sosumi ul {
     overflow: hidden; }
     #sosumi ul li {
@@ -532,7 +541,7 @@ nav {
       display: block;
       text-indent: -9999em; }
     #sosumi ul .github a {
-      background: url("../images/icon-github.png") no-repeat;
+      background: url('../images/icon-github.png') no-repeat;
       background-size: 100% auto;
       background-position: left bottom;
       width: 32px;
@@ -540,7 +549,7 @@ nav {
       #sosumi ul .github a:hover {
         background-position: left top; }
     #sosumi ul .twitter a {
-      background: url("../images/icon-twitter.png") no-repeat;
+      background: url('../images/icon-twitter.png') no-repeat;
       background-size: 100% auto;
       background-position: left bottom;
       width: 32px;
@@ -548,7 +557,7 @@ nav {
       #sosumi ul .twitter a:hover {
         background-position: left top; }
     #sosumi ul .linkedin a {
-      background: url("../images/icon-linkedin.png") no-repeat;
+      background: url('../images/icon-linkedin.png') no-repeat;
       background-size: 100% auto;
       background-position: left bottom;
       width: 32px;
@@ -597,22 +606,21 @@ nav {
         -webkit-animation-delay: 0s;
         animation-delay: 0s; }
       .menu-open nav ul li:nth-child(2) a {
-        -webkit-animation-delay: .1s;
-        animation-delay: .1s; }
+        -webkit-animation-delay: 0.1s;
+        animation-delay: 0.1s; }
       .menu-open nav ul li:nth-child(3) a {
-        -webkit-animation-delay: .2s;
-        animation-delay: .2s; }
+        -webkit-animation-delay: 0.2s;
+        animation-delay: 0.2s; }
   .menu-open #view {
     margin-top: -9px; }
-
   nav h1 {
     margin-bottom: 8px; }
   nav .hideme {
     font-size: 0px; }
   nav ul {
     height: 0px;
-    -webkit-transition: all .2s;
-    transition: all .2s; }
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s; }
   nav .menu-icon {
     height: 75%;
     width: 9%;
@@ -627,7 +635,6 @@ nav {
       margin: 18% 0;
       display: block;
       background: #606162; }
-
   .panel {
     padding: 2em 1em 1em; }
     .panel section {
@@ -637,18 +644,15 @@ nav {
       .panel section.jumbotron {
         padding: 1em 0em; }
         .panel section.jumbotron h2 {
-          padding: 0 .5em; } }
+          padding: 0 0.5em; } }
+
 @media all and (min-width: 769px) {
   .no-touch nav, .no-touch ul {
     overflow: visible; }
-  .no-touch nav:before,
-  .no-touch nav:after,
-  .no-touch nav ul:before,
-  .no-touch nav ul:after {
+  .no-touch nav:before, .no-touch nav:after, .no-touch nav ul:before, .no-touch nav ul:after {
     content: " ";
     /* 1 */
     display: table;
     /* 2 */ }
-  .no-touch nav:after,
-  .no-touch nav ul:after {
+  .no-touch nav:after, .no-touch nav ul:after {
     clear: both; } }
