--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,14 +4,14 @@
 		<p>My name is Mark. I specialise in web development and I'm currently available for contracting work in London.</p>
 		<p>My specialty is clean, accessible, responsive and optimised code using leading edge technology, whilst keeping in mind of legacy browsers that gracefully degrade to usable&nbsp;state.</p>
 		
-		<h2>Contact</h2>
+		<!-- <h2>Contact</h2>
 		<p>Please contact me on one of the channels below.</p>
-		
+
 		<ul>
 			<li><p>email me at <a href="mailto:&#x6D;&#x65;&#x40;&#x6D;&#x61;&#x72;&#x6B;&#x73;&#x79;&#x2E;&#x63;&#x6F;&#x6D;">&#x6D;&#x65;&#x40;&#x6D;&#x61;&#x72;&#x6B;&#x73;&#x79;&#x2E;&#x63;&#x6F;&#x6D;</a></p></li>
 			<li><p>call me at <a href="tel://+447936561301" title="Call Mark on" rel="telephone">+447936561301</a></p></li>
 			<li><p>tweet me at <a href="https://twitter.com/marksy/" target="_blank">@marksy</a></p></li>
-		</ul>
+		</ul> -->
 		
 		<section class="jumbotron">
 			<h2>Latest projects</h2>
