--- a/app/views/clients.html
+++ b/app/views/clients.html
@@ -6,7 +6,7 @@
 		
 		<h2><a href="https://aftersales.mini.co.uk/" title="MINI Aftersales - opens in a new window" target="_blank">MINI, Aftersales</a></h2>
 		<div class="image-wrap">
-			<img src="../app/images/clients/mini-02.jpg" width="1154" height="649" alt="MINI">
+			<img src="../app/images/clients/mini-01.jpg" alt="MINI">
 			<p class="show-section" ng-click="app.minias=!app.minias"><span class="link"><span ng-if="!app.minias"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.minias"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
 	</div>
 				
@@ -16,11 +16,11 @@
 				<p>The project had to fit into MINI's existing site, which meant we had to include it as an iFrame. However it's likely that the project will be included natively in future revisions of the MINI site.</p> 
 				<p>MINI Aftersales was created in mind of all devices, not just desktop.</p>
 				<p>Technologies include:</p>
-				<ul class="bxslider">
-					<li> <p>Sass/CSS</p></li>
-					<li> <p>HTML 5</p></li>
-					<li> <p>jQuery/Javascript</p></li>
-					<li> <p>Microsoft .net</p></li>
+				<ul>
+					<li><p>Sass/CSS</p></li>
+					<li><p>HTML 5</p></li>
+					<li><p>jQuery/Javascript</p></li>
+					<li><p>Microsoft .net</p></li>
 				</ul>
 				<p class="note">Due to the time and resource constraints, the project only works with Javascript enabled.</p>
 			</div>
@@ -30,7 +30,7 @@
 	
 		<h2>Nicoventures, Voke</h2>
 		<div class="image-wrap">
-			<img src="../app/images/clients/temp.png" width="1154" height="649" alt="TEMP">
+			<img src="../app/images/clients/temp.png" alt="TEMP">
 			<p class="show-section" ng-click="app.voke=!app.voke"><span class="link"><span ng-if="!app.voke"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.voke"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
 	</div>
 				
@@ -39,135 +39,124 @@
 		<p>Voke was a nicotine delivery product, which was similar to conventional e-cigarettes. We were asked to build a registration and holding page for Voke until their product was certified and available for public sale. Several revisions of the site were made to appease the client.</p> 
 		<p>Due to product, certification and client issues, the project was eventually scraped.</p>
 				<p>Technologies include:</p>
-				<ul class="bxslider">
-					<li> <p>Sass/CSS</p></li>
-					<li> <p>HTML 5</p></li>
-					<li> <p>jQuery/Javascript</p></li>
-					<li> <p>Microsoft .net</p></li>
+				<ul>
+					<li><p>Sass/CSS</p></li>
+					<li><p>HTML 5</p></li>
+					<li><p>jQuery/Javascript</p></li>
+					<li><p>Microsoft .net</p></li>
 				</ul>
 			</div>
 		</section>
 						
 	<hr />
 	
-		<!-- <h2>CLIENT, PROJECT</h2>
+		<h2>Adidas, Vamos Leo</h2>
 		<div class="image-wrap">
-			<img src="../app/images/clients/temp.png" width="1154" height="649" alt="TEMP">
-			<p class="show-section" ng-click="app.project=!app.project"><span class="link"><span ng-if="!app.project"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.project"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
+			<img src="../app/images/clients/temp.png" alt="TEMP">
+			<p class="show-section" ng-click="app.vamosleo=!app.vamosleo"><span class="link"><span ng-if="!app.vamosleo"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.vamosleo"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
 	</div>
 
-		<section ng-if="app.project">
+		<section ng-if="app.vamosleo">
 			<div class="wrap">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Before the World Cup 2014 started, Adidas asked iris to create a Facebook tab to promote their star player, Leo Messi. A multi-platform app drove users to the Facebook page where users could find more information about Adidas products and keep up-to-date with all things Messi via the Stackla social media aggregator.</p>
 				<p>Technologies include:</p>
-				<ul class="bxslider">
-					<li> <p>Sass/CSS</p></li>
-					<li> <p>HTML 5</p></li>
-					<li> <p>jQuery/Javascript</p></li>
-					<li> <p>Microsoft .net</p></li>
+				<ul>
+					<li><p>CSS</p></li>
+					<li><p>HTML 5</p></li>
+					<li><p>jQuery/Javascript</p></li>
+					<li><p>Microsoft .net (for localised content)</p></li>
+					<li><p>Facebook API</p></li>
+					<li><p>Stackla</p></li>
 				</ul>
 			</div>
 		</section>
 
-	<hr /> -->
+	<hr />
 	
-	
-		<h2>Adidas, Vamos Leo</h2>
-		<p>Before the World Cup 2014 started, Adidas asked us to create a Facebook tab to promote their star player, Leo Messi. A multi-platform app drove users to the Facebook page where users could find more information about Adidas products and keep up-to-date with all things Messi via the Stackla social media aggregator.</p>
-		<p>Technologies include HTML, CSS, and Microsoft .net framework (localised content).</p>
-		<p class="show-section" ng-click="app.vamos=!app.vamos"><span class="link vb"><span ng-if="!app.vamos">Show</span><span ng-if="app.vamos">Hide</span> details</span></p>	
-				
-		<section ng-if="app.vamos">
+		<h2>KIKO, Clic108 promotion</h2>
+		<div class="image-wrap">
+			<img src="../app/images/clients/temp.png"  alt="TEMP">
+			<p class="show-section" ng-click="app.clic108=!app.clic108"><span class="link"><span ng-if="!app.clic108"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.clic108"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
+	</div>
+
+		<section ng-if="app.clic108">
 			<div class="wrap">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Italian cosmetics company Kiko, instructed us to develop a Facebook tab for a short running competition in which users could fill in their contact details then choose a destination of their choice for a weekend holiday. The competition was open for about fifteen European countries.</p>
+			<p>One struggle we had was that iOS7 was released on the day before the competition launced. The issue was that Safari included swiping left/right to navigate, which conflicted with our colour palette swiping mechanism. We came to the conclusion that using navigation buttons instead of swiping solved the issue. Not the greatest solution, but the best solution in the time we had to deliver the project.</p>
+				<p>Technologies include:</p>
 				<ul>
-					<li> <p>something</p></li>
-					<li> <p>something</p></li>
-					<li> <p>something</p></li>
-					<li> <p>something</p></li>
+					<li><p>CSS</p></li>
+					<li><p>HTML 5</p></li>
+					<li><p>jQuery &amp; BXSlider (jQuery plugin)</p></li>
+					<li><p>Microsoft .net (for localised content)</p></li>
 				</ul>
 			</div>
 		</section>
-		
-		<hr />
-			
-			<h2>Kiko, Clic108 promotion</h2>
-			<p>Italian cosmetics company Kiko, instructed us to develop a Facebook tab for a short running competition in which users could fill in their contact details then choose a destination of their choice for a weekend holiday. The competition was open for about fifteen European countries.</p>
-			<p>One struggle we had was that iOS7 was released on the day before the competition launced. The issue was that Safari included swiping left/right to navigate, which conflicted with our colour palette swiping mechanism. We came to the conclusion that using navigation buttons instead of swiping solved the issue. Not the greatest solution, but the best solution in the time we had to deliver the project.</p>
-			<p>The technologies involved were HTML, CSS, Javascript, BX Slider, Microsoft .net framework. </p>
-			<p class="show-section" ng-click="app.kiko=!app.kiko"><span class="link vb"><span ng-if="!app.kiko">Show</span><span ng-if="app.kiko">Hide</span> details</span></p>	
-				
-			<section ng-if="app.kiko">
-				<div class="wrap">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<ul>
-						<li> <p>something</p></li>
-						<li> <p>something</p></li>
-						<li> <p>something</p></li>
-						<li> <p>something</p></li>
-					</ul>
-				</div>
-			</section>
-			
-			<hr />
-	
+
+	<hr /> 
+
 				<h2>Domino's, X-Factor promotion</h2>
+				<div class="image-wrap">
+					<img src="../app/images/clients/temp.png"  alt="TEMP">
+					<p class="show-section" ng-click="app.xfactor=!app.xfactor"><span class="link"><span ng-if="!app.xfactor"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.xfactor"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
+			</div>
+
+				<section ng-if="app.xfactor">
+					<div class="wrap">
 				<p>During the advert breaks of X-Factor (UK TV series aired in late 2013), the associated iOS and Android companion app would burst into life (fullscreen screen takeover) via adsync and display our minisite, games and quiz. </p>
 				<p>The object was to promote Domino's pizza, one of the company's sponsors, engage viewers and reward them with discounted products fromo Domino's. A pretty attractive choice for a family on a Friday and/or Saturday evening.</p>
-				<p>Technologies included HTML, CSS, Javascript.</p>
-				<p class="show-section" ng-click="app.chicken=!app.chicken"><span class="link vb"><span ng-if="!app.chicken">Show</span><span ng-if="app.chicken">Hide</span> details</span></p>	
-				
-				<section ng-if="app.chicken">
-					<div class="wrap">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Technologies include:</p>
 						<ul>
-							<li> <p>something</p></li>
-							<li> <p>something</p></li>
-							<li> <p>something</p></li>
-							<li> <p>something</p></li>
+							<li><p>CSS</p></li>
+							<li><p>HTML 5</p></li>
+							<li><p>jQuery/Javascript</p></li>
 						</ul>
 					</div>
 				</section>
-				
-				<hr />
-	
+
+			<hr /> 
+
 					<h2>Shell, Road Services</h2>
-					<p>Shell requested that we re-develop their webapp that was originally created in Flash, into an HTML 5 compliant website. The main reason being, Shell truck drivers use mobile tablets (rather than laptop computers) to gather Shell service information, such as ferry services, tax refunds and break-down services.</p>
-					<p>Technologies included, HTML, CSS, Javascript </p>
-					<p class="show-section" ng-click="app.chicken=!app.chicken"><span class="link vb"><span ng-if="!app.chicken">Show</span><span ng-if="app.chicken">Hide</span> details</span></p>	
-				
-					<section ng-if="app.chicken">
+					<div class="image-wrap">
+						<img src="../app/images/clients/temp.png" alt="TEMP">
+						<p class="show-section" ng-click="app.roadservices=!app.roadservices"><span class="link"><span ng-if="!app.roadservices"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.roadservices"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
+				</div>
+
+					<section ng-if="app.roadservices">
 						<div class="wrap">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Shell wanted to re-develop their webapp (that was originally created in Flash), into a simple HTML 5 compliant webapp. The main reason being, Shell truck drivers use mobile tablets (rather than laptop computers) to gather Shell service information, such as ferry services, tax refunds and break-down services.</p>
+							<p>Technologies include:</p>
 							<ul>
-								<li> <p>something</p></li>
-								<li> <p>something</p></li>
-								<li> <p>something</p></li>
-								<li> <p>something</p></li>
+								<li><p>CSS</p></li>
+								<li><p>HTML 5</p></li>
+								<li><p>jQuery/Javascript</p></li>
 							</ul>
 						</div>
 					</section>
+
+				<hr /> 
 				
-				<hr />
-	
-					<h2>Reckitt Benkeiser, Durex</h2>
-					<p>Durex was a stiff site to build (tee hee). Originally we were tasked at building their global site, with up to six microsites/interactive game sites, all of which would work responsively, be backward compatible not to mention be localised.</p>
-					<p>However our creative director decided that the whole look-and-feel should change half-way through the build, which affected build and QA, then had knock-on effects, such as the client being confused on what we were actually delivering. Regardless of internal and external problems, we managed to deliver a stable release on the day that was agreed. </p>
-					<p>In retrospect the site should have been rebuilt rather than added to, when the creative director requested fundamental changes.</p>
-					<p>Technology included HTML, CSS, Animation, Javascript.</p>
-					<p class="show-section" ng-click="app.durex=!app.durex"><span class="link vb"><span ng-if="!app.durex">Show</span><span ng-if="app.durex">Hide</span> details</span></p>	
-				
+					<h2><a href="http://durex.co.uk" target="_blank">Reckitt Benkeiser, Durex</a></h2>
+					<div class="image-wrap">
+						<img src="../app/images/clients/durex-01.jpg" alt="TEMP">
+						<p class="show-section" ng-click="app.durex=!app.durex"><span class="link"><span ng-if="!app.durex"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.durex"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
+				</div>
+
 					<section ng-if="app.durex">
 						<div class="wrap">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Durex was a challenging site build. Originally we were tasked at building their global site, with up to six microsites/interactive game sites, all of which would work responsively, be backward compatible with IE6, not to mention be localised.</p>
+					<p>However multiple problems arose such as, the creative director deciding that the whole look-and-feel should change half-way through the build (which affected both build and QA), the client (who were made up of the UK, Global, and North American division) being confused on what we were actually delivering, and the North American division wanting their site live before the agreed date. Regardless of internal and external problems, we managed to deliver a stable release on the day that was agreed. </p>
+					<p>In retrospect the site should have been rebuilt rather than added to, when the creative director requested fundamental changes.</p>
+							<p>Technologies include:</p>
 							<ul>
-								<li> <p>something</p></li>
-								<li> <p>something</p></li>
-								<li> <p>something</p></li>
-								<li> <p>something</p></li>
+								<li><p>CSS &amp; animation</p></li>
+								<li><p>HTML 5</p></li>
+								<li><p>jQuery/Javascript</p></li>
+								<li><p>Microsoft .net</p></li>
 							</ul>
 						</div>
 					</section>
+
 					
 	</article>
 </div>
