--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -8,6 +8,8 @@
 			<li><p>tweet me at <a target="_blank" href="https://twitter.com/marksy/">@marksy</a></p></li>
 			<li><p>phone me at <a rel="telephone" title="Call Mark on" href="tel://+447936561301">+447936561301</a></p></li>
 		</ul>
+		
+		<p>You can also find me on <a href="https://www.yunojuno.com/p/mark-chambers" target="_blank">YunoJuno</a>.</p>
 				
 	</article>
 </div>
