--- a/app/views/home.html
+++ b/app/views/home.html
@@ -17,16 +17,16 @@
 			<h2>Latest projects</h2>
 			<ul rn-carousel rn-carousel-control="true" class="image">
 			  <li>
-				  <div class="img"><img src="../app/images/clients/mini-01.png" alt="" /></div>
+				  <div class="img"><img src="../app/images/mini-01.png" alt="" /></div>
 				  <div class="text"><p>MINI, Aftersales</p></div>
 				  <div class="swipe"><p>swipe &rarr;</p></div>
 			  </li>
 			  <li>
-				  <div class="img"><img src="../app/images/clients/hue-01.png" alt="" /></div>
+				  <div class="img"><img src="../app/images/hue-01.png" alt="" /></div>
 				  <div class="text"><p>Philips, Meet Hue</p></div>
 			  </li>
 			  <li>
-				  <div class="img"><img src="../app/images/clients/voke-01.png" alt="" /></div>
+				  <div class="img"><img src="../app/images/voke-01.png" alt="" /></div>
 				  <div class="text"><p>Nicoventures, Voke</p></div>
 			  </li>
 			</ul>
