--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,6 +5,9 @@
 		
 		<h2>About me</h2>
 		<p>I'm a web developer originally from Wellington, New Zealand. I graduated from the National College of Multimedia and Technology whilst I worked part-time for a web production company. I moved to the UK in 2006 and freelanced for a short period before taking up permanent work. </p>
+		<p>I enjoy the outdoors, camping, cycling, surfing, skiing, tennis, golf, gardening, growing chillies, making jams &amp; cutney, fermenting wine and making beef jerky.</p>
+		<p>I keep a <a href="/blog">blog</a> of news and thoughts, a mix of code, baking, technology and travel logs.</p>
+		
 		
 		<h2>My skills</h2>
 		<p>The key to optimised code is the understanding of how it all works.</p>
@@ -16,9 +19,9 @@
 					<li><p>HTML</p></li>
 					<li><p>Javascript; jQuery, AngularJS, vanilla</p></li>
 					<li><p>Version control; git/svn</p></li>
-					<li><p>Debugging for iOS/Android, and Desktop browsers (including IE)</p></li>
+					<li><p>Debugging for iOS/Android, and desktop browsers (including IE)</p></li>
 					<li><p>Facebook app/page development</p></li>
-					<li><p>Social media APIs including Twitter, Facebook, Google, Stackla</p></li>
+					<li><p>Social media APIs including Twitter, Facebook, Google Maps/Analytics, Stackla</p></li>
 					<li><p>.net Visual Studio with Umbraco CMS; developing in the environment and basic .net controls, MVC ideology</p></li>
 					<li><p>Grunt task runner</p></li>
 					<li><p>Atlassian Jira</p></li>
@@ -29,7 +32,6 @@
 					<li><p>Logic; audio composition &amp; programming</p></li>
 					<li><p>Experience with CDNs; Cloudflare, AWS, Akamai</p></li>
 				</ul>
-		
 		
 		
 	</section>
