--- a/app/app/scss/main.scss
+++ b/app/app/scss/main.scss
@@ -612,6 +612,14 @@ nav {
 	}
 	section {
 		background-color: $green;
+		
+		.image {
+			
+			img {
+				width: 100%;
+				height: auto;
+			}
+		}
 	}
 	.image-wrap {
 		position: relative;
