--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,7 +5,7 @@
 		
 		<h2>About me</h2>
 		<p>I'm a web developer originally from Wellington, New Zealand. I graduated from the National College of Multimedia and Technology whilst I worked part-time for a web production company. I moved to the UK in 2006 and freelanced for a short period before taking up permanent work. </p>
-		<p>I enjoy the outdoors, camping, cycling, surfing, skiing, tennis, golf, gardening, growing chillies, making jams &amp; cutney, fermenting wine and making beef jerky.</p>
+		<p>I enjoy the outdoors, camping, cycling, surfing, skiing, tennis, golf, gardening, growing chillies, making jams &amp; chutney, fermenting wine and making beef jerky.</p>
 		<p>I keep a <a href="/blog">blog</a> of news and thoughts, a mix of code, baking, technology and travel logs.</p>
 		
 		
