--- a/app/views/clients.html
+++ b/app/views/clients.html
@@ -4,7 +4,7 @@
 		<h1>Clients</h1>
 		<p>Below is a list of some projects I've been working on during my employment at iris worldwide. Some of the sites below can't be linked to because they were promotions that ran for a short period. The latest projects start at the top. </p>
 		
-		<h2><a href="https://aftersales.mini.co.uk/" title="MINI Aftersales - opens in a new window" target="_blank">MINI, Aftersales</a></h2>
+		<h2 id="mini-aftersales"><a href="https://aftersales.mini.co.uk/" title="MINI Aftersales - opens in a new window" target="_blank">MINI, Aftersales</a></h2>
 		<div class="image-wrap">
 			<img src="../app/images/clients/mini-01.jpg" alt="MINI">
 			<p class="show-section" ng-click="app.minias=!app.minias"><span class="link"><span ng-if="!app.minias"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.minias"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
@@ -28,7 +28,7 @@
 						
 	<hr />
 	
-		<h2>Nicoventures, Voke</h2>
+		<h2 id="nicoventures-voke">Nicoventures, Voke</h2>
 		<div class="image-wrap">
 			<img src="../app/images/clients/temp.png" alt="TEMP">
 			<p class="show-section" ng-click="app.voke=!app.voke"><span class="link"><span ng-if="!app.voke"><span class="icon-wrap-show"></span>Show</span><span ng-if="app.voke"><span class="icon-wrap-close"></span>Hide</span> details</span></p>
@@ -36,8 +36,8 @@
 				
 		<section ng-if="app.voke">
 			<div class="wrap">
-		<p>Voke was a nicotine delivery product, which was similar to conventional e-cigarettes. We were asked to build a registration and holding page for Voke until their product was certified and available for public sale. Several revisions of the site were made to appease the client.</p> 
-		<p>Due to product, certification and client issues, the project was eventually scraped.</p>
+				<p>Voke was a nicotine delivery product, which was similar to conventional e-cigarettes. We were asked to build a registration and holding page for Voke until their product was certified and available for public sale. Several revisions of the site were made to appease the client.</p> 
+				<p>Due to product, certification and client issues, the project was eventually scraped.</p>
 				<p>Technologies include:</p>
 				<ul>
 					<li><p>Sass/CSS</p></li>
@@ -45,6 +45,19 @@
 					<li><p>jQuery/Javascript</p></li>
 					<li><p>Microsoft .net</p></li>
 				</ul>
+				
+				<ul rn-carousel rn-carousel-control="true" class="image">
+					<li>
+					  <img src="../app/images/mini-01.png" alt="" />
+					</li>
+					<li>
+					  <img src="../app/images/mini-01.png" alt="" />
+					</li>
+					<li>
+					  <img src="../app/images/mini-01.png" alt="" />
+					</li>
+				</ul>
+				
 			</div>
 		</section>
 						
@@ -67,6 +80,18 @@
 					<li><p>Microsoft .net (for localised content)</p></li>
 					<li><p>Facebook API</p></li>
 					<li><p>Stackla</p></li>
+				</ul>
+				
+				<ul rn-carousel rn-carousel-control="true" class="image">
+					<li>
+					  <img src="../app/images/mini-01.png" alt="" />
+					</li>
+					<li>
+					  <img src="../app/images/mini-01.png" alt="" />
+					</li>
+					<li>
+					  <img src="../app/images/mini-01.png" alt="" />
+					</li>
 				</ul>
 			</div>
 		</section>
