--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 	<article class="panel">
 		<h1>Hello.</h1>
 		<p>My name is Mark. I specialise in web development and I'm currently available for contracting work in London.</p>
-		<p>My specialty is clean, accessible, responsive and optimised code using leading edge technology, whilst keeping in mind of legacy browsers that gracefully degrade to usable&nbsp;state.</p>
+		<p>My specialty is clean, accessible, responsive and optimised code using leading edge technology, whilst keeping in mind of legacy browsers that degrade gracefully to usable&nbsp;state.</p>
 		
 		<!-- <h2>Contact</h2>
 		<p>Please contact me on one of the channels below.</p>
